fixed a tag wrap behavior fixed ugly blur on underlined text

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ footer {
 
 a {
     color: var(--primary);
+    white-space: pre-wrap;
 }
 a:hover {
     color: var(--primary-accent);
@@ -64,5 +65,6 @@ svg.icon {
 
 .blur, .blur a {
     color: transparent;
-    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+    text-shadow: 0 0 5px var(--dark);
+    text-decoration: none;
 }
